update for WM 19042021

--- a/About.html
+++ b/About.html
@@ -202,7 +202,7 @@
             <h2 class="h2"><p style="text-align: center;">The Sandbox Story</p> </h2>
             <br>
             <div id="sandbox-principles">
-            <h4 class="h4" style="text-align: left;"><u>Establishment of the Regulatory Sandbox</u></h4>
+            <h4 class="h4" style="text-align: left;"><i><u>Establishment of the Regulatory Sandbox</u></i></h4>
             <p style="text-align: left;">The Sandbox Framework was published in October 2016 to enable the experimentation of fintech solutions in a live environment, with the appropriate safeguards and regulatory requirements. The policy was issued following a public consultation of the policy’s exposure draft released in July 2016 which received over 60 feedback from various stakeholders including financial institutions, fintech companies, associations and other corporates. </p>
             <p style="text-align: left;">Following the comments and suggestions received from the public, the eligibility criteria of the Sandbox was expanded to clarify the focus of innovations that the sandbox aims to support. Innovations should have clear potential to:</p>
             <p style="text-align: left;">(i) improve the accessibility, efficiency, security and quality of financial services;</p>
@@ -212,7 +212,7 @@
             <br>
             <p style="text-align: left;" class="hover-arrow"><a href="index.html#related-publications">More information: Press Release</a></p>
             <br>
-            <h4 class="h4" style="text-align: left;"><u>Principles Behind the Sandbox </u></h4>
+            <h4 class="h4" style="text-align: left;"><i><u>Principles Behind the Sandbox </u></i></h4>
             <p style="text-align: left;">The establishment of the Sandbox Framework and broader efforts by the Bank to facilitate innovation in financial services are guided by three key principles:</p>
             <p style="text-align: left;">(i) <strong><i>Parity</i></strong> – the Bank strives to create a level playing field for all industry players, regardless if they are incumbents or new entrants in the market. Regulatory requirements are applied equally to similar activities which often presents similar risks. In simpler terms - “same risks, same rules”. However, the Bank also recognises that regulations will need to be adjusted to address risks associated with new technologies and business models, in order to facilitate the creation of value through innovative solutions. </p>
             <p style="text-align: left;">(ii) <strong><i>Proportionality</i></strong> – regulators are also guided by this principle in designing regulations to ensure that requirements appropriately reflect the complexity and risk profile associated with a particular business activity or entity. In doing so, the Bank seeks to balance between achieving the desired policy objectives to safeguard public interest and minimising regulatory burden for the financial services industry. </p>
