--- a/Guidance.html
+++ b/Guidance.html
@@ -302,7 +302,7 @@ color: black;
 
   <div class="card mb-2 card-sm card-body hover-shadow-sm aos-init" data-aos="fade-up" data-aos-delay="NaN">
     <div data-target="#faq-2" class="accordion-panel-title" data-toggle="collapse" role="button" aria-expanded="false" aria-controls="faq-2">
-      <span class="h6 mb-0" style="text-align: left;">Clearly identify whether the proposed product or solution is either wholly or partly incompatible with laws, regulations or standards administered by the Bank</span>
+      <span class="h6 mb-0" style="text-align: left;">1.  Clearly identify whether the proposed product or solution is either wholly or partly incompatible with laws, regulations or standards administered by the Bank</span>
       <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" class="injected-svg icon" data-src="/o/finmkt/images/icons/interface/plus.svg" xmlns:xlink="http://www.w3.org/1999/xlink">
 <path d="M19 11H5C4.44772 11 4 11.4477 4 12C4 12.5523 4.44772 13 5 13H19C19.5523 13 20 12.5523 20 12C20 11.4477 19.5523 11 19 11Z" fill="#212529"></path>
 <path d="M13 19L13 5C13 4.44772 12.5523 4 12 4C11.4477 4 11 4.44772 11 5L11 19C11 19.5523 11.4477 20 12 20C12.5523 20 13 19.5523 13 19Z" fill="#212529"></path>
@@ -322,7 +322,7 @@ color: black;
   </div>
           <div class="card mb-2 card-sm card-body hover-shadow-sm aos-init" data-aos="fade-up" data-aos-delay="NaN">
             <div data-target="#faq-3" class="accordion-panel-title" data-toggle="collapse" role="button" aria-expanded="false" aria-controls="faq-3">
-              <span class="h6 mb-0" style="text-align: left;">Demonstrate that you have a practical business plan and you are in a reasonable state of readiness with sufficient resources to support testing in the Bank’s Regulatory Sandbox.</span>
+              <span class="h6 mb-0" style="text-align: left;">2.  Demonstrate that you have a practical business plan and you are in a reasonable state of readiness with sufficient resources to support testing in the Bank’s Regulatory Sandbox.</span>
               <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" class="injected-svg icon" data-src="https://amer6693.github.io/images/icons/interface/plus.svg" xmlns:xlink="http://www.w3.org/1999/xlink">
 <path d="M19 11H5C4.44772 11 4 11.4477 4 12C4 12.5523 4.44772 13 5 13H19C19.5523 13 20 12.5523 20 12C20 11.4477 19.5523 11 19 11Z" fill="#212529"></path>
 <path d="M13 19L13 5C13 4.44772 12.5523 4 12 4C11.4477 4 11 4.44772 11 5L11 19C11 19.5523 11.4477 20 12 20C12.5523 20 13 19.5523 13 19Z" fill="#212529"></path>
@@ -346,7 +346,7 @@ color: black;
           </div>
           <div class="card mb-2 card-sm card-body hover-shadow-sm aos-init" data-aos="fade-up" data-aos-delay="NaN">
             <div data-target="#faq-4" class="accordion-panel-title" data-toggle="collapse" role="button" aria-expanded="false" aria-controls="faq-4">
-              <span class="h6 mb-0" style="text-align: left;">Adequately substantiate that the proposed solution has a genuinely innovative value proposition </span>
+              <span class="h6 mb-0" style="text-align: left;">3.  Adequately substantiate that the proposed solution has a genuinely innovative value proposition </span>
               <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" class="injected-svg icon" data-src="https://amer6693.github.io/images/icons/interface/plus.svg" xmlns:xlink="http://www.w3.org/1999/xlink">
 <path d="M19 11H5C4.44772 11 4 11.4477 4 12C4 12.5523 4.44772 13 5 13H19C19.5523 13 20 12.5523 20 12C20 11.4477 19.5523 11 19 11Z" fill="#212529"></path>
 <path d="M13 19L13 5C13 4.44772 12.5523 4 12 4C11.4477 4 11 4.44772 11 5L11 19C11 19.5523 11.4477 20 12 20C12.5523 20 13 19.5523 13 19Z" fill="#212529"></path>
@@ -364,7 +364,7 @@ color: black;
           </div>
           <div class="card mb-2 card-sm card-body hover-shadow-sm aos-init" data-aos="fade-up" data-aos-delay="NaN">
             <div data-target="#faq-5" class="accordion-panel-title" data-toggle="collapse" role="button" aria-expanded="false" aria-controls="faq-5">
-              <span class="h6 mb-0" style="text-align: left;">Enhance your understanding of the Sandbox by going through the Regulatory Sandbox Framework </span>
+              <span class="h6 mb-0" style="text-align: left;">4.  Enhance your understanding of the Sandbox by going through the Regulatory Sandbox Framework </span>
               <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" class="injected-svg icon" data-src="https://amer6693.github.io/images/icons/interface/plus.svg" xmlns:xlink="http://www.w3.org/1999/xlink">
 <path d="M19 11H5C4.44772 11 4 11.4477 4 12C4 12.5523 4.44772 13 5 13H19C19.5523 13 20 12.5523 20 12C20 11.4477 19.5523 11 19 11Z" fill="#212529"></path>
 <path d="M13 19L13 5C13 4.44772 12.5523 4 12 4C11.4477 4 11 4.44772 11 5L11 19C11 19.5523 11.4477 20 12 20C12.5523 20 13 19.5523 13 19Z" fill="#212529"></path>
@@ -472,8 +472,9 @@ color: black;
 <h3 class="text-light">Tips and tricks to note when applying to the Sandbox​</h3>
     <div class="card mb-2 card-sm card-body hover-shadow-sm aos-init aos-animate" data-aos="fade-up" data-aos-delay="NaN">
             <div data-target="#faq-5" class="accordion-panel-title" data-toggle="collapse" role="button" aria-expanded="false" aria-controls="faq-5">
-              <span class="h6 mb-0">Think thoroughly about whether you are ready to test your proposed business model in a live environment</span>
-              <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" class="injected-svg icon" data-src="/o/finmkt/images/icons/interface/plus.svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+              <span style='color:black; margin-left: 10px;'>
+                <b><dl>Think thoroughly about whether you are ready to test your proposed business model in a live environment</dl></b>
+            </span>              <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" class="injected-svg icon" data-src="/o/finmkt/images/icons/interface/plus.svg" xmlns:xlink="http://www.w3.org/1999/xlink">
 <path d="M19 11H5C4.44772 11 4 11.4477 4 12C4 12.5523 4.44772 13 5 13H19C19.5523 13 20 12.5523 20 12C20 11.4477 19.5523 11 19 11Z" fill="#212529"></path>
 <path d="M13 19L13 5C13 4.44772 12.5523 4 12 4C11.4477 4 11 4.44772 11 5L11 19C11 19.5523 11.4477 20 12 20C12.5523 20 13 19.5523 13 19Z" fill="#212529"></path>
 </svg>
@@ -492,8 +493,10 @@ color: black;
 
     <div class="card mb-2 card-sm card-body hover-shadow-sm aos-init aos-animate" data-aos="fade-up" data-aos-delay="NaN">
             <div data-target="#faq-6" class="accordion-panel-title" data-toggle="collapse" role="button" aria-expanded="false" aria-controls="faq-6">
-              <span class="h6 mb-0">Be committed and sincere in engaging with us when you apply to the Sandbox</span>
-              <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" class="injected-svg icon" data-src="/o/finmkt/images/icons/interface/plus.svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+              <span style='color:black; margin-left: 10px;'>
+                <b><dl>Be committed and sincere in engaging with us when you apply to the Sandbox</dl></b>
+            </span>  
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" class="injected-svg icon" data-src="/o/finmkt/images/icons/interface/plus.svg" xmlns:xlink="http://www.w3.org/1999/xlink">
 <path d="M19 11H5C4.44772 11 4 11.4477 4 12C4 12.5523 4.44772 13 5 13H19C19.5523 13 20 12.5523 20 12C20 11.4477 19.5523 11 19 11Z" fill="#212529"></path>
 <path d="M13 19L13 5C13 4.44772 12.5523 4 12 4C11.4477 4 11 4.44772 11 5L11 19C11 19.5523 11.4477 20 12 20C12.5523 20 13 19.5523 13 19Z" fill="#212529"></path>
 </svg>
@@ -512,8 +515,9 @@ color: black;
 
     <div class="card mb-2 card-sm card-body hover-shadow-sm aos-init aos-animate" data-aos="fade-up" data-aos-delay="NaN">
             <div data-target="#faq-7" class="accordion-panel-title" data-toggle="collapse" role="button" aria-expanded="false" aria-controls="faq-7">
-              <span class="h6 mb-0">Write in a factual manner and communicate your key messages clearly in your application.​</span>
-              <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" class="injected-svg icon" data-src="/o/finmkt/images/icons/interface/plus.svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+              <span style='color:black; margin-left: 10px;'>
+                <b><dl>Write in a factual manner and communicate your key messages clearly in your application</dl></b>
+            </span>              <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" class="injected-svg icon" data-src="/o/finmkt/images/icons/interface/plus.svg" xmlns:xlink="http://www.w3.org/1999/xlink">
 <path d="M19 11H5C4.44772 11 4 11.4477 4 12C4 12.5523 4.44772 13 5 13H19C19.5523 13 20 12.5523 20 12C20 11.4477 19.5523 11 19 11Z" fill="#212529"></path>
 <path d="M13 19L13 5C13 4.44772 12.5523 4 12 4C11.4477 4 11 4.44772 11 5L11 19C11 19.5523 11.4477 20 12 20C12.5523 20 13 19.5523 13 19Z" fill="#212529"></path>
 </svg>
@@ -548,8 +552,8 @@ color: black;
                   <div class="collapse" id="faq-8">
                     <div class="pt-3">
                       <p class="mb-0">
-                        <ul style="margin-left: 20px;">
-                          <dl>Approval to test in the Sandbox may be viewed as a ‘learner’s permit’. A full licence or approval is not necessarily guaranteed after the test.​ </dl>
+                        <ul class="triangle">
+                          <li>Approval to test in the Sandbox may be viewed as a ‘learner’s permit’. A full licence or approval is not necessarily guaranteed after the test.​ </li>
                         </ul></p>
                     </div>
                   </div>
@@ -568,9 +572,9 @@ color: black;
                   <div class="collapse" id="faq-9">
                     <div class="pt-3">
                       <p class="mb-0">
-                        <ul style="margin-left: 20px;">
-                          <dl> The most common reasons applicants are not eligible for the Sandbox are as follows:​</dl>
-                          <ul class="triangle">
+                        <ul class="triangle">
+                          <li> The most common reasons applicants are not eligible for the Sandbox are as follows:​</li>
+                          <ul class="triangle-2" style="margin-left: 20px;">
                             <li>Applicant did not clearly identify regulatory impediments</li> ​
                           <li>Applicant wrongly identified regulatory impediments, such as specifying regulations that are outside the Bank’s purview​</li>
                         <li>Applicant did not demonstrate a clear value proposition. ​</li>
@@ -594,9 +598,9 @@ color: black;
                   <div class="collapse" id="faq-10">
                     <div class="pt-3">
                       <p class="mb-0">
-                        <ul style="margin-left: 20px;">
-                          <dl>The Bank is committed to providing a response within 15 working days upon receiving complete information from an applicant.​</dl>
-                          <dl> Most applicants are not at a sufficient state of readiness to test in the Sandbox at the time of application. Often, information that are required for assessment may not be readily available. </dl>
+                        <ul class="triangle">
+                          <li>The Bank is committed to providing a response within 15 working days upon receiving complete information from an applicant.​</li>
+                          <li> Most applicants are not at a sufficient state of readiness to test in the Sandbox at the time of application. Often, information that are required for assessment may not be readily available. </li>
                         </ul></p>
                     </div>
                   </div>
