--- a/Regulations.html
+++ b/Regulations.html
@@ -173,7 +173,7 @@ translateY(-10px);
           <div class="col">
 		   <h2 class="h2">General Guidance on the Bank's Regulations</h2>
 		   <p class="lead px-5 mb-2">The principal role of the Bank is to promote monetary and financial stability that is conducive to the sustainable growth of the Malaysian economy. </p>
-       <p class="lead px-5 mb-2">In doing so, the Bank is entrusted with several functions including the fostering of a sound, progressive and inclusive financial system. Accordingly, the Bank’s regulations are based on robust principles and are designed to achieve parity, proportionality and neutrality <a href="About.html#sandbox-principles"><i><u>(more about principles)</u></i>​</a></p>
+       <p class="lead px-5 mb-2">In doing so, the Bank is entrusted with several functions including the fostering of a sound, progressive and inclusive financial system. Accordingly, the Bank’s regulations are based on robust principles and are designed to achieve parity, proportionality and neutrality <a href="About.html#sandbox-principles" style="font-size: 14px;"><i><u>(more about principles)</u></i>​</a></p>
           </div>
         </div>
       </div>
@@ -413,11 +413,11 @@ translateY(-10px);
 
     <section class="bg-primary-alt py-0">
      </div>    
-      <div class="container py-4 ">
+      <div class="container py-2 ">
         <div class="row justify-content-center ">
           <div class="col-12 mb-3 text-light">
-            <h3 class="h3" style="text-align: center; color: black;">Legislation </h3><br>
-            <p style="color: black; justify-content: center;">The Bank is vested with comprehensive legal powers under various legislations to discharge its mandate and carry out its functions.</p>
+            <h3 class="h3 mb-0" style="text-align: center; color: black;">Legislation </h3><br>
+            <p style="color: black; text-align: center;">The Bank is vested with comprehensive legal powers under various legislations to discharge its mandate and carry out its functions.</p>
 
             <div class="row mx-1 justify-content-center">
               <div class="col-4 col-md-4 col-lg-4" >
@@ -434,7 +434,7 @@ translateY(-10px);
                   <a href="https://www.bnm.gov.my/documents/20124///35ed2b4c-1995-f91d-3891-75d69d247d55" target="_blank">
                   <div class="card card-body-2 pt-3 py-2">
                     <div class="flex-grow-0">
-                      <p style="text-align: center; color: black;"><b>Financial Services Act (FSA) 2013</b></p>
+                      <p style="text-align: center; color: black;"><b>Financial Services Act 2013</b></p>
                     </div>
                   </div>
                 </a>
@@ -446,7 +446,7 @@ translateY(-10px);
                   <a href="https://www.bnm.gov.my/documents/20124///8102422b-e6dd-d149-8db0-e3637e89ed5c" target="_blank">
                   <div class="card card-body-2 pt-3 py-2">
                     <div class="flex-grow-0">
-                      <p style="text-align: center; color: black;"><b>Islamic Financial Services Act (IFSA) 2013</b></p>
+                      <p style="text-align: center; color: black;"><b>Islamic Financial Services Act 2013</b></p>
                     </div>
                   </div>
                 </a>
@@ -456,7 +456,7 @@ translateY(-10px);
                   <a href="https://www.bnm.gov.my/documents/20124///ef89a17a-0a5b-27ad-8aba-458a9888cd1f" target="_blank">
                   <div class="card card-body-2 pt-3 py-4">
                     <div class="flex-grow-0">
-                      <p style="text-align: center; color: black;"><b>Money Services Business Act (MSBA) 2011
+                      <p style="text-align: center; color: black;"><b>Money Services Business Act 2011
                       </b></p>
                     </div>
                   </div>
@@ -467,7 +467,7 @@ translateY(-10px);
                   <a href="https://www.bnm.gov.my/documents/20124///72c34953-3515-a4b9-2217-9322bb75d22b" target="_blank">
                   <div class="card card-body-2 pt-3 py-1">
                     <div class="flex-grow-0">
-                      <p style="text-align: center; color: black;"><b>Anti-Money Laundering, Anti-Terrorism Financing and Proceeds of Unlawful Activities Act 2001 (Act 613)
+                      <p style="text-align: center; color: black;"><b>Anti-Money Laundering, Anti-Terrorism Financing and Proceeds of Unlawful Activities Act 2001
                       </b></p>
                     </div>
                   </div>
