--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                          <td class="h5 px-1 py-0" style="text-align: right;">13</td>
                        </tr>
                        </tbody></table>
-                       <p style="text-align: right" class="text-primary-3 text-small px-1 py-0 text-muted">*Cumulative number of applicants since establishment of the Regulatory Sandbox in July 2016</p>
+                       <p style="text-align: right" class="text-primary-3 text-small px-1 py-0 text-muted">*Cumulative number of applicants since establishment of the Regulatory Sandbox in 2016</p>
                      </div>
                    </div>
                  </div>
@@ -180,7 +180,7 @@
                    <div class="card bg-primary-alt">
                      <div class="card-body d-flex flex-column">
                        <div class="d-flex justify-content:between">
-                       <h4>Applicant(s) currently in live-testing</h4>
+                       <h4 style="justify-content: center;">Applicant(s) currently in live-testing</h4>
                        </div>
                        <div class="column" style="text-align: right;">Period of live-testing (months)</div>
                        <table class="table text-large">
