--- a/Regulations.html
+++ b/Regulations.html
@@ -363,7 +363,7 @@ translateY(-10px);
       <div class="row mx-1 justify-content-center">
         <div class="col-12 col-md-4 col-lg-4" >
             <div class="card card-body" style="vertical-align: middle;">
-              <div class="flex-grow-0">
+              <div class="flex-grow-0 justify-content-center">
                 <h5 class="h5" style="text-align: center;">Licence</h5>
                 <a href="https://www.bnm.gov.my/web/guest/commercial-banks" target="_blank"><p id="rcorners1" style="float:left;;">Commercial/ Islamic Banks</p></a>
                 <a href="https://www.bnm.gov.my/insurance-takaful" target="_blank"><p id="rcorners1" style="float: right; ">Insurance and Takaful</p></a>
