change scope of regulations desciprtion

--- a/Regulations.html
+++ b/Regulations.html
@@ -354,7 +354,10 @@ translateY(-10px);
         <div class="row justify-content-center text-center mb-2">
           <div class="col">
             <h3 class="mx-lg-8" style="color: white;">Scope of regulated entities and activities</h3>
-            <p class="lead px-3 mb-4" style="color: white;">Safety and soundness of financial services provider is key to maintaining consumer trust and confidence in the financial system</p>
+            <p class="lead px-3 mb-4" style="color: white;">Proportionality is a key guiding principle in the Bank’s approach to regulations. In deliberating regulatory policies and requirements, the Bank strives to strike a balance between achieving the desired policy objectives to safeguard public
+              interest and minimising regulatory burden for the financial services industry. A risk-proportionate design in regulation takes into account various factors that affect the degree of potential risk, such as the complexity and scale of operations, the types
+              of potential risks, as well as the maturity of industry players to appropriately manage risks. Accordingly, the Bank practices three gatekeeping regimes – license, approval and registration, where the level of regulatory requirements are differentiated. Activities
+              requiring a license will generally attract stricter requirements, compared to activities requiring approval. Similarly, activities that require registration will attract less regulations compared to an approval.</p>
          </div>
         </div>
       </div>
