--- a/Regulations.html
+++ b/Regulations.html
@@ -210,12 +210,14 @@ translateY(-10px);
 </svg>
             </div>
             <div class="collapse" id="faq-1">
-              <div class="pt-3">
-                <p style="font-size: 16px"><i>Objective</i></p>
+              <div class="pb-4">
+                <p>Effective anti-money laundering and anti-terrorism financing regimes are essential to protect the integrity of markets and of the broader financial system as they help mitigate the risk factors that contribute towards the abuse of financial services for ilicit purposes.</p>
+                <p style="font-size: 16px"><i>Key objectives of AML/CFT regulations: </i></p>
                 <p style="font-size: medium;"><ul>
-                  <li>Effective management of money laundering or terrorist financing risks through appropriate mitigation measures</li>
+                  <li>Effective management of money laundering and/or terrorist financing risks through appropriate mitigation measures</li>
                   <li>Prevent the infiltration and abuse by criminals to the reporting institutions</li>
                   </ul></p>
+                  <a href="https://amlcft.bnm.gov.my/" class="hover-arrow">Read more about AML/CFT regulations</a>
                 </div>
               </div>
             </div>
@@ -230,12 +232,15 @@ translateY(-10px);
 </svg>
             </div>
             <div class="collapse" id="faq-2">
-              <div class="pt-3">
-                <p style="font-size: 16px"><i>Objective</i></p>
+              <div class="pb-4">
+                <p>As part of the Bank’s principal regulatory objective to promote financial stability, the Bank strives to foster fair, responsible and professional business conduct of financial service providers and to protect the rights and interests of consumers of financial services and products.</p>
+                <p style="font-size: 16px"><i>Key objectives of market conduct regulations: </i></p>
                 <p style="font-size: medium;"><ul>
                   <li>Promoting fair and equitable market practices</li>
-                  <li>Promoting the financial capabilities of consumers</li>
+                  <li>Ensure consumers are adequately protected</li>
+                  <li>Foster financial literacy and capability of consumers </li>
                   </ul></p>
+                  <a href="https://www.bnm.gov.my/web/guest/market-conduct" class="hover-arrow">Read more about market conduct</a>
               </div>
             </div>
           </div>
@@ -249,19 +254,21 @@ translateY(-10px);
 </svg>
             </div>
             <div class="collapse" id="faq-3">
-              <div class="pt-3">
-                <p style="font-size: 16px"><i>Objective</i></p>
+              <div class="pb-4">
+                <p>A robust, effective and efficient prudential regulatory framework that is responsive to changing economic conditions is critical to maintain the resilience of financial institutions and the broader financial sector, while providing an environment conducive for financial innovation and growth.  </p>
+                <p style="font-size: 16px"><i>Key objectives of prudential regulations: </i></p>
                 <p style="font-size: medium;"><ul>
-                  <li>Able to withstand adverse economic condition and maintain customer confidence</li>
+                  <li>Able to withstand adverse economic condition and maintain customer confidence </li>
                   <li>Address moral hazards by mitigating excessive risk-taking behaviour</li>
                   <li>Protection of depositors and policyholders by preventing mismanagement of funds</li>
                   </ul></p>
                   <p style="font-size: 16px"><i>Key components of prudential regulation</i></p>
                   <p style="font-size: medium;"><ul>
-                    <li>Able to withstand adverse economic condition and maintain customer confidence</li>
-                    <li>Address moral hazards by mitigating excessive risk-taking behaviour</li>
-                    <li>Protection of depositors and policyholders by preventing mismanagement of funds</li>
+                    <li>Ensure sufficient liquidity and capital adequacy </li>
+                    <li>Good corporate governance </li>
+                    <li>Sound risk management and limits </li>
                     </ul></p>
+                    <a href="https://www.bnm.gov.my/web/guest/prudential-regulation" class="hover-arrow">Read more about prudential regulations</a>
               </div>
             </div>
           </div>
@@ -280,16 +287,9 @@ translateY(-10px);
 </svg>
             </div>
             <div class="collapse" id="faq-4">
-              <div class="pt-3">
-                <p style="font-size: 16px"><i>Objective</i></p>
-                <p style="font-size: medium;"><ul>
-                  <li>Security and consumer’s privacy</li>
-                  <li>Ensure business continuity if technology fails</li>
-                  </ul></p>
-                  <p style="font-size: 16px"><i>Policy</i></p>
-                  <p style="font-size: medium;"><ul>
-                    <li>Managing cyber risk from malware attacks, DDoS and hacks.</li>
-                    </ul></p>
+              <div class="pb-4">
+                <p>The Bank is entrusted to ensure safety, soundness and robustness of financial service providers and the broader financial industry. An effective supervision framework is necessary to foster confidence of consumers and businesses in the financial sector. This includes supervision of technology-related risks, including cybersecurity, data privacy and operational risks. </p>
+                  <a href="https://www.bnm.gov.my/supervision" class="hover-arrow">Read more about supervision</a>
               </div>
             </div>
           </div>
@@ -303,16 +303,9 @@ translateY(-10px);
 </svg>
             </div>
             <div class="collapse" id="faq-5">
-              <div class="pt-3">
-                <p style="font-size: 16px"><i>Objective</i></p>
-                <p style="font-size: medium;"><ul>
-                  <li>XX</li>
-                  <li>XX</li>
-                  </ul></p>
-                  <p style="font-size: 16px"><i>XX</i></p>
-                  <p style="font-size: medium;"><ul>
-                    <li>XX</li>
-                    </ul></p>
+              <div class="pb-4">
+                <p>The Bank relies on both financial regulations and monetary policy tools, to promote monetary stability, as well as safeguard and manage the value of the Ringgit in a manner that is conducive to the sustainable growth of the Malaysian economy. This includes the Foreign Exchange Policy which seeks to facilitate a conducive environment for cross-border real economic activities is the. </p>
+                <a href="https://www.bnm.gov.my/fep/" class="hover-arrow">Read more about foreign exchange policy</a>
               </div>
             </div>
           </div>
@@ -325,16 +318,9 @@ translateY(-10px);
 </svg>
             </div>
             <div class="collapse" id="faq-6">
-              <div class="pt-3">
-                <p style="font-size: 16px"><i>Objective</i></p>
-                <p style="font-size: medium;"><ul>
-                  <li>XX</li>
-                  <li>XX</li>
-                  </ul></p>
-                  <p style="font-size: 16px"><i>XX</i></p>
-                  <p style="font-size: medium;"><ul>
-                    <li>XX</li>
-                    </ul></p>
+              <div class="pb-4">
+                <p>The Bank plays a crucial role in the development of a progressive and inclusive financial sector which entails preserving the core foundations of financial stability at all times, ensuring effective and efficient financial intermediation, and contributing towards economic growth and development. </p>
+                  <a href="https://www.bnm.gov.my/financial-sector-development1" class="hover-arrow">Read more about financial sector development</a>
               </div>
             </div>
           </div>
@@ -352,9 +338,9 @@ translateY(-10px);
 
       <div class="container">
         <div class="row justify-content-center text-center mb-2">
-          <div class="col">
-            <h3 class="mx-lg-8" style="color: white;">Scope of regulated entities and activities</h3>
-            <p class="lead px-3 mb-4" style="color: white;">Proportionality is a key guiding principle in the Bank’s approach to regulations. In deliberating regulatory policies and requirements, the Bank strives to strike a balance between achieving the desired policy objectives to safeguard public
+          <div class="col text-light">
+            <h3 class="mx-lg-8">Scope of regulated entities and activities</h3>
+            <p>Proportionality is a key guiding principle in the Bank’s approach to regulations. In deliberating regulatory policies and requirements, the Bank strives to strike a balance between achieving the desired policy objectives to safeguard public
               interest and minimising regulatory burden for the financial services industry. A risk-proportionate design in regulation takes into account various factors that affect the degree of potential risk, such as the complexity and scale of operations, the types
               of potential risks, as well as the maturity of industry players to appropriately manage risks. Accordingly, the Bank practices three gatekeeping regimes – license, approval and registration, where the level of regulatory requirements are differentiated. Activities
               requiring a license will generally attract stricter requirements, compared to activities requiring approval. Similarly, activities that require registration will attract less regulations compared to an approval.</p>
