update box colours

--- a/Guidance.html
+++ b/Guidance.html
@@ -95,7 +95,7 @@ dl {
 
 /* Style the front side (fallback if image is missing) */
 .flip-card-front {
-  background-color: #DCDCDC;
+  background-color: #1B4079;
   color: white;
   border-radius: 25px;
   display: flex;
@@ -136,7 +136,7 @@ dl {
   margin-left: -40px;
   border-top: 40px solid transparent;
   border-bottom: 40px solid transparent;
-  border-left: 40px solid rgb(25, 61, 116);
+  border-left: 40px solid gray;
 }
 
 
@@ -256,7 +256,7 @@ dl {
       <div class="flip-card">
         <div class="flip-card-inner">
           <div class="flip-card-front"><a href="Guidance.html#pre-application">
-            <h4>Pre application</h4>
+            <h4 style="color: white;">Pre application</h4>
           </div>
           <div class="flip-card-back">
             <h5>What should you do before applying to the Sandbox</h5></a>
@@ -272,7 +272,7 @@ dl {
       <div class="flip-card">
         <div class="flip-card-inner">
           <div class="flip-card-front"><a href="Guidance.html#stage-1">
-            <h4>Stage 1: Application</h4>
+            <h4 style="color: white;">Stage 1: Application</h4>
           </div>
           <div class="flip-card-back">
             <h5>How do I apply to the Sandbox, and what response can I expect?​</h5></a>
@@ -287,7 +287,7 @@ dl {
       <div class="flip-card">
         <div class="flip-card-inner">
           <div class="flip-card-front">
-            <h4>Stage 2: Preparation</h4><a href="Guidance.html#stage-2">
+            <h4 style="color: white;">Stage 2: Preparation</h4><a href="Guidance.html#stage-2">
             </div>
           <div class="flip-card-back mx-1">
             <h5>How should I prepare for live-testing?​</h5></a>
@@ -302,7 +302,7 @@ dl {
       <div class="flip-card">
         <div class="flip-card-inner">
           <div class="flip-card-front">
-            <h4>Stage 3: Live-testing</h4><a href="Guidance.html#stage-3">
+            <h4 style="color: white;">Stage 3: Live-testing</h4><a href="Guidance.html#stage-3">
           </div>
           <div class="flip-card-back px-2">
             <h5>What to expect during live-testing?​</h5></a>
